--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,8 +16,12 @@ Imports:
     fs,
     fst,
     rlang,
+    stats,
     utils,
     withr
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.3
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
